[package]
name = "ssz-json"
version = "0.1.0"
authors = ["Matt Garnett <14004106+c-o-l-o-r@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.92", features = ["derive"] }
serde_json = { version = "1.0.39", features = ["preserve_order"] }
indexmap = {version = "1.0.2", features = ["serde-1"]}
ssz = "0.1.2"
ssz-derive = "0.1.2"
