[package]
name = "ssz-cli"
version = "0.2.0"
authors = ["Matt Garnett <14004106+c-o-l-o-r@users.noreply.github.com>"]
license = "Apache-2.0"
description = "A tool to convert files to a hex representation of SSZ"
repository = "https://github.com/c-o-l-o-r/ssz-json"
keywords = ["ssz", "wasm", "ewasm"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
clap = "2.33.0"
hex = "0.3.2"
ssz-json = { path = "../", version = "0.0.2" }

[[bin]]
name = "ssz"
path = "src/main.rs"
